// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lib FOE Compute Process Compute Valid Value 1`] = `
Object {
  "bonusUbq": 45,
  "bp": 8,
  "coinSupplyReturn": Array [
    Object {
      "coin": 62500,
      "supply": 62500,
    },
    Object {
      "coin": 25500,
      "supply": 25500,
    },
    Object {
      "coin": 4000,
      "supply": 4000,
    },
  ],
  "dailyUbq": 30,
  "defaultCumulativeQuest": 0,
  "fp": 40,
  "goods": 533,
  "infinityGenerator": false,
  "medals": 200,
  "secondRqCompleted": 0,
  "totalFp": 40,
  "totalGoods": 533,
  "totalRqCompleted": 115,
}
`;

exports[`Lib FOE Compute Process Compute Valid Value with infinite generator with 0 cumulative quests 1`] = `
Object {
  "bonusUbq": 0,
  "bp": 0,
  "coinSupplyReturn": Array [],
  "dailyUbq": 30,
  "defaultCumulativeQuest": 0,
  "fp": 0,
  "goods": 0,
  "infinityGenerator": true,
  "medals": 0,
  "secondRqCompleted": 0,
  "totalFp": 0,
  "totalGoods": 0,
  "totalRqCompleted": 0,
}
`;

exports[`Lib FOE Compute Process Compute Valid Value with infinite generator with 14 cumulative quests 1`] = `
Object {
  "bonusUbq": 392,
  "bp": 30,
  "coinSupplyReturn": Array [
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
    Object {
      "coin": 56000,
      "supply": 56000,
    },
  ],
  "dailyUbq": 30,
  "defaultCumulativeQuest": 0,
  "fp": 150,
  "goods": 4200,
  "infinityGenerator": true,
  "medals": 1680,
  "secondRqCompleted": 0,
  "totalFp": 150,
  "totalGoods": 4200,
  "totalRqCompleted": 422,
}
`;

exports[`Lib FOE Compute Process Compute Valid Value with second RQ and  1`] = `
Object {
  "bonusUbq": 2954,
  "bp": 360,
  "coinSupplyReturn": Array [
    Object {
      "coin": 50384600,
      "supply": 54533920,
    },
    Object {
      "coin": 34158300,
      "supply": 49492900,
    },
    Object {
      "coin": 23503200,
      "supply": 46454380,
    },
    Object {
      "coin": 15854200.000000002,
      "supply": 44018320,
    },
    Object {
      "coin": 10643000.000000002,
      "supply": 42315820,
    },
    Object {
      "coin": 6972600.000000002,
      "supply": 40987740,
    },
    Object {
      "coin": 4590500.000000002,
      "supply": 40128560,
    },
    Object {
      "coin": 2811000.000000002,
      "supply": 39338900,
    },
    Object {
      "coin": 1758400.0000000019,
      "supply": 38894380,
    },
    Object {
      "coin": 917100.0000000019,
      "supply": 38409620,
    },
    Object {
      "coin": 221500.00000000186,
      "supply": 37874240,
    },
    Object {
      "coin": 41500.00000000186,
      "supply": 37724240,
    },
  ],
  "dailyUbq": 666,
  "defaultCumulativeQuest": 0,
  "fp": 1800,
  "goods": 91851,
  "infinityGenerator": false,
  "medals": 1011960,
  "secondRqCompleted": 1381,
  "totalFp": 2042,
  "totalGoods": 91974,
  "totalRqCompleted": 5043,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value 1`] = `
Object {
  "cost": 510,
  "investment": Array [
    Object {
      "cumulativeInvestment": 455,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 55,
      "isInvestorParticipation": false,
      "participation": 55,
      "preparation": 400,
      "reward": 55,
      "roi": 0,
      "snipe": Object {
        "fp": 255,
        "roi": -200,
      },
    },
    Object {
      "cumulativeInvestment": 485,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 30,
      "isInvestorParticipation": false,
      "participation": 30,
      "preparation": 400,
      "reward": 30,
      "roi": 0,
      "snipe": Object {
        "fp": 255,
        "roi": -225,
      },
    },
    Object {
      "cumulativeInvestment": 500,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 405,
      "reward": 10,
      "roi": 0,
      "snipe": Object {
        "fp": 255,
        "roi": -245,
      },
    },
    Object {
      "cumulativeInvestment": 505,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 5,
      "isInvestorParticipation": false,
      "participation": 5,
      "preparation": 405,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 255,
        "roi": -250,
      },
    },
    Object {
      "defaultParticipationIndex": -1,
      "expectedParticipation": 0,
      "isInvestorParticipation": false,
      "preparation": 410,
      "reward": 0,
      "roi": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "level": 10,
  "otherInvestment": Array [],
  "totalPreparations": 410,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value for PostmodernEra 20 -> 21 with owner preparation (276) and investors: P1 447, P2 228 and P4 63 instead of 19 1`] = `
Object {
  "cost": 1155,
  "investment": Array [
    Object {
      "cumulativeInvestment": 1014,
      "defaultParticipationIndex": 0,
      "expectedParticipation": 447,
      "isInvestorParticipation": true,
      "participation": 447,
      "preparation": 276,
      "reward": 235,
      "roi": 0,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 1014,
      "defaultParticipationIndex": 1,
      "expectedParticipation": 228,
      "isInvestorParticipation": true,
      "participation": 228,
      "preparation": 276,
      "reward": 120,
      "roi": 0,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 1090,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 76,
      "isInvestorParticipation": false,
      "participation": 76,
      "preparation": 276,
      "reward": 40,
      "roi": 0,
      "snipe": Object {
        "fp": 71,
        "roi": -31,
      },
    },
    Object {
      "cumulativeInvestment": 1092,
      "defaultParticipationIndex": 2,
      "expectedParticipation": 19,
      "isInvestorParticipation": true,
      "participation": 63,
      "preparation": 278,
      "reward": 10,
      "roi": -44,
      "snipe": Object {
        "fp": 102,
        "roi": -92,
      },
    },
    Object {
      "defaultParticipationIndex": -1,
      "expectedParticipation": 0,
      "isInvestorParticipation": false,
      "preparation": 341,
      "reward": 0,
      "roi": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "level": 21,
  "otherInvestment": Array [],
  "totalPreparations": 341,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with Arc 36 -> 37, with one investor 1`] = `
Object {
  "cost": 1890,
  "investment": Array [
    Object {
      "cumulativeInvestment": 972,
      "defaultParticipationIndex": 0,
      "expectedParticipation": 972,
      "isInvestorParticipation": true,
      "participation": 972,
      "preparation": 0,
      "reward": 540,
      "roi": 0,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 1458,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 486,
      "isInvestorParticipation": false,
      "participation": 486,
      "preparation": 0,
      "reward": 270,
      "roi": 0,
      "snipe": Object {
        "fp": 459,
        "roi": 54,
      },
    },
    Object {
      "cumulativeInvestment": 1728,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 162,
      "isInvestorParticipation": false,
      "participation": 162,
      "preparation": 108,
      "reward": 90,
      "roi": 0,
      "snipe": Object {
        "fp": 459,
        "roi": -288,
      },
    },
    Object {
      "cumulativeInvestment": 1845,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 45,
      "isInvestorParticipation": false,
      "participation": 45,
      "preparation": 180,
      "reward": 25,
      "roi": 0,
      "snipe": Object {
        "fp": 459,
        "roi": -411,
      },
    },
    Object {
      "cumulativeInvestment": 1881,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 9,
      "isInvestorParticipation": false,
      "participation": 9,
      "preparation": 207,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 459,
        "roi": -449,
      },
    },
  ],
  "level": 37,
  "otherInvestment": Array [],
  "totalPreparations": 216,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with Cap 9 -> 10, extra investors 1`] = `
Object {
  "cost": 880,
  "investment": Array [
    Object {
      "cumulativeInvestment": 869,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 181,
      "isInvestorParticipation": false,
      "participation": 181,
      "preparation": 348,
      "reward": 95,
      "roi": 0,
      "snipe": Object {
        "fp": 270,
        "roi": -175,
      },
    },
    Object {
      "cumulativeInvestment": 869,
      "defaultParticipationIndex": 0,
      "expectedParticipation": 95,
      "isInvestorParticipation": true,
      "participation": 170,
      "preparation": 348,
      "reward": 50,
      "roi": -75,
      "snipe": Object {
        "fp": 355,
        "roi": -305,
      },
    },
    Object {
      "cumulativeInvestment": 869,
      "defaultParticipationIndex": 1,
      "expectedParticipation": 29,
      "isInvestorParticipation": true,
      "participation": 95,
      "preparation": 348,
      "reward": 15,
      "roi": -66,
      "snipe": Object {
        "fp": 318,
        "roi": -303,
      },
    },
    Object {
      "cumulativeInvestment": 869,
      "defaultParticipationIndex": 2,
      "expectedParticipation": 10,
      "isInvestorParticipation": true,
      "participation": 70,
      "preparation": 348,
      "reward": 5,
      "roi": -60,
      "snipe": Object {
        "fp": 305,
        "roi": -300,
      },
    },
    Object {
      "cumulativeInvestment": 880,
      "defaultParticipationIndex": 3,
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 2,
      "preparation": 359,
      "reward": 0,
      "roi": -2,
      "snipe": Object {
        "fp": 271,
        "roi": -271,
      },
    },
  ],
  "level": 10,
  "otherInvestment": Array [
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "totalPreparations": 359,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with Cap 26 -> 27, owner start to secure 1`] = `
Object {
  "cost": 1340,
  "investment": Array [
    Object {
      "cumulativeInvestment": 732,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 608,
      "isInvestorParticipation": false,
      "participation": 608,
      "preparation": 124,
      "reward": 320,
      "roi": 0,
      "snipe": Object {
        "fp": 632,
        "roi": -312,
      },
    },
    Object {
      "cumulativeInvestment": 1036,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 304,
      "isInvestorParticipation": false,
      "participation": 304,
      "preparation": 124,
      "reward": 160,
      "roi": 0,
      "snipe": Object {
        "fp": 632,
        "roi": -472,
      },
    },
    Object {
      "cumulativeInvestment": 1235,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 105,
      "isInvestorParticipation": false,
      "participation": 105,
      "preparation": 218,
      "reward": 55,
      "roi": 0,
      "snipe": Object {
        "fp": 632,
        "roi": -577,
      },
    },
    Object {
      "cumulativeInvestment": 1311,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 29,
      "isInvestorParticipation": false,
      "participation": 29,
      "preparation": 265,
      "reward": 15,
      "roi": 0,
      "snipe": Object {
        "fp": 632,
        "roi": -617,
      },
    },
    Object {
      "cumulativeInvestment": 1330,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 274,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 632,
        "roi": -627,
      },
    },
  ],
  "level": 27,
  "otherInvestment": Array [],
  "totalPreparations": 284,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with Cap level 32 → 33, with four investors, 1st at 779 PFs, 2nd at 390 PFs, 4th at 57 PFs, 6th at 1 PF 1`] = `
Object {
  "cost": 1553,
  "investment": Array [
    Object {
      "cumulativeInvestment": 1330,
      "defaultParticipationIndex": 0,
      "expectedParticipation": 779,
      "isInvestorParticipation": true,
      "participation": 779,
      "preparation": 103,
      "reward": 410,
      "roi": 0,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 1330,
      "defaultParticipationIndex": 1,
      "expectedParticipation": 390,
      "isInvestorParticipation": true,
      "participation": 390,
      "preparation": 103,
      "reward": 205,
      "roi": 0,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 1477,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 133,
      "isInvestorParticipation": false,
      "participation": 133,
      "preparation": 117,
      "reward": 70,
      "roi": 0,
      "snipe": Object {
        "fp": 112,
        "roi": -42,
      },
    },
    Object {
      "cumulativeInvestment": 1497,
      "defaultParticipationIndex": 2,
      "expectedParticipation": 38,
      "isInvestorParticipation": true,
      "participation": 57,
      "preparation": 137,
      "reward": 20,
      "roi": -19,
      "snipe": Object {
        "fp": 140,
        "roi": -120,
      },
    },
    Object {
      "cumulativeInvestment": 1544,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 174,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 112,
        "roi": -107,
      },
    },
  ],
  "level": 33,
  "otherInvestment": Array [
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "totalPreparations": 183,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with Château Frontenac level 85 → 86, with two investor at 100 PFs 1`] = `
Object {
  "cost": 5422,
  "investment": Array [
    Object {
      "cumulativeInvestment": 3407,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 2115,
      "isInvestorParticipation": false,
      "participation": 2115,
      "preparation": 1092,
      "reward": 1175,
      "roi": 0,
      "snipe": Object {
        "fp": 2311,
        "roi": -78,
      },
    },
    Object {
      "cumulativeInvestment": 4469,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 1062,
      "isInvestorParticipation": false,
      "participation": 1062,
      "preparation": 1092,
      "reward": 590,
      "roi": 0,
      "snipe": Object {
        "fp": 2311,
        "roi": -1190,
      },
    },
    Object {
      "cumulativeInvestment": 5171,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 351,
      "isInvestorParticipation": false,
      "participation": 351,
      "preparation": 1443,
      "reward": 195,
      "roi": 0,
      "snipe": Object {
        "fp": 2311,
        "roi": -1940,
      },
    },
    Object {
      "cumulativeInvestment": 5322,
      "defaultParticipationIndex": 0,
      "expectedParticipation": 90,
      "isInvestorParticipation": true,
      "participation": 100,
      "preparation": 1594,
      "reward": 50,
      "roi": -10,
      "snipe": Object {
        "fp": 2361,
        "roi": -2266,
      },
    },
    Object {
      "cumulativeInvestment": 5322,
      "defaultParticipationIndex": 1,
      "expectedParticipation": 18,
      "isInvestorParticipation": true,
      "participation": 100,
      "preparation": 1594,
      "reward": 10,
      "roi": -82,
      "snipe": Object {
        "fp": 2361,
        "roi": -2342,
      },
    },
  ],
  "level": 86,
  "otherInvestment": Array [],
  "totalPreparations": 1694,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with Temple of Relics level 19 → 20, with 9 investors 1`] = `
Object {
  "cost": 833,
  "investment": Array [
    Object {
      "cumulativeInvestment": 559,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 295,
      "isInvestorParticipation": false,
      "participation": 295,
      "preparation": 156,
      "reward": 155,
      "roi": 0,
      "snipe": Object {
        "fp": 363,
        "roi": -208,
      },
    },
    Object {
      "cumulativeInvestment": 711,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 152,
      "isInvestorParticipation": false,
      "participation": 152,
      "preparation": 156,
      "reward": 80,
      "roi": 0,
      "snipe": Object {
        "fp": 363,
        "roi": -283,
      },
    },
    Object {
      "cumulativeInvestment": 806,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 48,
      "isInvestorParticipation": false,
      "participation": 48,
      "preparation": 203,
      "reward": 25,
      "roi": 0,
      "snipe": Object {
        "fp": 363,
        "roi": -338,
      },
    },
    Object {
      "cumulativeInvestment": 832,
      "defaultParticipationIndex": 0,
      "expectedParticipation": 10,
      "isInvestorParticipation": true,
      "participation": 21,
      "preparation": 229,
      "reward": 5,
      "roi": -11,
      "snipe": Object {
        "fp": 373,
        "roi": -368,
      },
    },
    Object {
      "cumulativeInvestment": 832,
      "defaultParticipationIndex": 1,
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 20,
      "preparation": 229,
      "reward": 0,
      "roi": -20,
      "snipe": Object {
        "fp": 373,
        "roi": -373,
      },
    },
  ],
  "level": 20,
  "otherInvestment": Array [
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 14,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 10,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 10,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 10,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 10,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 8,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 5,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "totalPreparations": 230,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with empty investor array 1`] = `
Object {
  "cost": 510,
  "investment": Array [
    Object {
      "cumulativeInvestment": 455,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 55,
      "isInvestorParticipation": false,
      "participation": 55,
      "preparation": 400,
      "reward": 55,
      "roi": 0,
      "snipe": Object {
        "fp": 255,
        "roi": -200,
      },
    },
    Object {
      "cumulativeInvestment": 485,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 30,
      "isInvestorParticipation": false,
      "participation": 30,
      "preparation": 400,
      "reward": 30,
      "roi": 0,
      "snipe": Object {
        "fp": 255,
        "roi": -225,
      },
    },
    Object {
      "cumulativeInvestment": 500,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 405,
      "reward": 10,
      "roi": 0,
      "snipe": Object {
        "fp": 255,
        "roi": -245,
      },
    },
    Object {
      "cumulativeInvestment": 505,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 5,
      "isInvestorParticipation": false,
      "participation": 5,
      "preparation": 405,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 255,
        "roi": -250,
      },
    },
    Object {
      "defaultParticipationIndex": -1,
      "expectedParticipation": 0,
      "isInvestorParticipation": false,
      "preparation": 410,
      "reward": 0,
      "roi": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "level": 10,
  "otherInvestment": Array [],
  "totalPreparations": 410,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with extra investors (2 snip for P1 and P2) 1`] = `
Object {
  "cost": 2138,
  "investment": Array [
    Object {
      "cumulativeInvestment": 1606,
      "defaultParticipationIndex": 0,
      "expectedParticipation": 1197,
      "isInvestorParticipation": true,
      "participation": 1069,
      "preparation": 0,
      "reward": 630,
      "roi": 128,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 1606,
      "defaultParticipationIndex": 1,
      "expectedParticipation": 599,
      "isInvestorParticipation": true,
      "participation": 537,
      "preparation": 0,
      "reward": 315,
      "roi": 62,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 1938,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 200,
      "isInvestorParticipation": false,
      "participation": 200,
      "preparation": 132,
      "reward": 105,
      "roi": 0,
      "snipe": Object {
        "fp": 266,
        "roi": -161,
      },
    },
    Object {
      "cumulativeInvestment": 2090,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 48,
      "isInvestorParticipation": false,
      "participation": 48,
      "preparation": 236,
      "reward": 25,
      "roi": 0,
      "snipe": Object {
        "fp": 266,
        "roi": -241,
      },
    },
    Object {
      "cumulativeInvestment": 2128,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 264,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 266,
        "roi": -261,
      },
    },
  ],
  "level": 42,
  "otherInvestment": Array [],
  "totalPreparations": 274,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with extra investors 1`] = `
Object {
  "cost": 2741,
  "investment": Array [
    Object {
      "cumulativeInvestment": 1550,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 1473,
      "isInvestorParticipation": false,
      "participation": 1473,
      "preparation": 0,
      "reward": 775,
      "roi": 0,
      "snipe": Object {
        "fp": 1332,
        "roi": -557,
      },
    },
    Object {
      "cumulativeInvestment": 2291,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 741,
      "isInvestorParticipation": false,
      "participation": 741,
      "preparation": 0,
      "reward": 390,
      "roi": 0,
      "snipe": Object {
        "fp": 1332,
        "roi": -942,
      },
    },
    Object {
      "cumulativeInvestment": 2538,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 247,
      "isInvestorParticipation": false,
      "participation": 247,
      "preparation": 0,
      "reward": 130,
      "roi": 0,
      "snipe": Object {
        "fp": 1332,
        "roi": -1202,
      },
    },
    Object {
      "cumulativeInvestment": 2667,
      "defaultParticipationIndex": 0,
      "expectedParticipation": 67,
      "isInvestorParticipation": true,
      "participation": 75,
      "preparation": 129,
      "reward": 35,
      "roi": -8,
      "snipe": Object {
        "fp": 1370,
        "roi": -1335,
      },
    },
    Object {
      "cumulativeInvestment": 2732,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 184,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 1332,
        "roi": -1327,
      },
    },
  ],
  "level": 56,
  "otherInvestment": Array [
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "totalPreparations": 193,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with investor that secure place 1`] = `
Object {
  "cost": 1073,
  "investment": Array [
    Object {
      "cumulativeInvestment": 573,
      "defaultParticipationIndex": 0,
      "expectedParticipation": 371,
      "isInvestorParticipation": true,
      "participation": 500,
      "preparation": 73,
      "reward": 195,
      "roi": -129,
      "snipe": Object {
        "fp": 537,
        "roi": -342,
      },
    },
    Object {
      "cumulativeInvestment": 883,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 190,
      "isInvestorParticipation": false,
      "participation": 190,
      "preparation": 193,
      "reward": 100,
      "roi": 0,
      "snipe": Object {
        "fp": 287,
        "roi": -187,
      },
    },
    Object {
      "cumulativeInvestment": 1006,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 67,
      "isInvestorParticipation": false,
      "participation": 67,
      "preparation": 249,
      "reward": 35,
      "roi": 0,
      "snipe": Object {
        "fp": 287,
        "roi": -252,
      },
    },
    Object {
      "cumulativeInvestment": 1054,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 19,
      "isInvestorParticipation": false,
      "participation": 19,
      "preparation": 278,
      "reward": 10,
      "roi": 0,
      "snipe": Object {
        "fp": 287,
        "roi": -277,
      },
    },
    Object {
      "defaultParticipationIndex": -1,
      "expectedParticipation": 0,
      "isInvestorParticipation": false,
      "preparation": 297,
      "reward": 0,
      "roi": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "level": 18,
  "otherInvestment": Array [],
  "totalPreparations": 297,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with investor that secure place with P1 780 instead of 181 and P3 10 instead of 29 1`] = `
Object {
  "cost": 880,
  "investment": Array [
    Object {
      "cumulativeInvestment": 790,
      "defaultParticipationIndex": 0,
      "expectedParticipation": 181,
      "isInvestorParticipation": true,
      "participation": 780,
      "preparation": 0,
      "reward": 95,
      "roi": -599,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 880,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 95,
      "isInvestorParticipation": false,
      "participation": 90,
      "preparation": 0,
      "reward": 50,
      "roi": 0,
      "snipe": Object {
        "fp": 45,
        "roi": 5,
      },
    },
    Object {
      "defaultParticipationIndex": 1,
      "expectedParticipation": 29,
      "isInvestorParticipation": true,
      "participation": 10,
      "preparation": 0,
      "reward": 15,
      "roi": 19,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "defaultParticipationIndex": -1,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "preparation": 0,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "defaultParticipationIndex": -1,
      "expectedParticipation": 0,
      "isInvestorParticipation": false,
      "preparation": 0,
      "reward": 0,
      "roi": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "level": 10,
  "otherInvestment": Array [],
  "totalPreparations": 0,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with many investors 1`] = `
Object {
  "cost": 70,
  "investment": Array [
    Object {
      "cumulativeInvestment": 42,
      "defaultParticipationIndex": 0,
      "expectedParticipation": 19,
      "isInvestorParticipation": true,
      "participation": 33,
      "preparation": 2,
      "reward": 10,
      "roi": -14,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 65,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 15,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 15,
        "roi": -10,
      },
    },
    Object {
      "cumulativeInvestment": 72,
      "defaultParticipationIndex": 1,
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 2,
      "preparation": 22,
      "reward": 0,
      "roi": -2,
      "snipe": Object {
        "fp": 16,
        "roi": -16,
      },
    },
    Object {
      "defaultParticipationIndex": 2,
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 20,
      "reward": 0,
      "roi": -1,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "defaultParticipationIndex": 3,
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 20,
      "reward": 0,
      "roi": -1,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "level": 1,
  "otherInvestment": Array [
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
    Object {
      "expectedParticipation": 0,
      "isInvestorParticipation": true,
      "participation": 1,
      "preparation": 0,
      "reward": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "totalPreparations": 20,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestment Valid value with owner that secure place and snipe on P1 1`] = `
Object {
  "cost": 1371,
  "investment": Array [
    Object {
      "cumulativeInvestment": 822,
      "defaultParticipationIndex": 0,
      "expectedParticipation": 608,
      "isInvestorParticipation": true,
      "participation": 549,
      "preparation": 273,
      "reward": 320,
      "roi": 59,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 1126,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 304,
      "isInvestorParticipation": false,
      "participation": 304,
      "preparation": 273,
      "reward": 160,
      "roi": 0,
      "snipe": Object {
        "fp": 275,
        "roi": -115,
      },
    },
    Object {
      "cumulativeInvestment": 1266,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 105,
      "isInvestorParticipation": false,
      "participation": 105,
      "preparation": 308,
      "reward": 55,
      "roi": 0,
      "snipe": Object {
        "fp": 275,
        "roi": -220,
      },
    },
    Object {
      "cumulativeInvestment": 1342,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 29,
      "isInvestorParticipation": false,
      "participation": 29,
      "preparation": 355,
      "reward": 15,
      "roi": 0,
      "snipe": Object {
        "fp": 275,
        "roi": -260,
      },
    },
    Object {
      "cumulativeInvestment": 1361,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 10,
      "isInvestorParticipation": false,
      "participation": 10,
      "preparation": 364,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 275,
        "roi": -270,
      },
    },
  ],
  "level": 24,
  "otherInvestment": Array [],
  "totalPreparations": 374,
}
`;

exports[`Lib FOE Compute Process FoeGbInvestment ComputeLevelInvestmentRange Valid value 1`] = `
Object {
  "global": Object {
    "cost": 2500,
    "totalPreparations": 2025,
  },
  "levels": Array [
    Object {
      "cost": 40,
      "investment": Array [
        Object {
          "cumulativeInvestment": 35,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 30,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 20,
            "roi": -15,
          },
        },
        Object {
          "cumulativeInvestment": 40,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 30,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 20,
            "roi": -15,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 30,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 30,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 30,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 1,
      "otherInvestment": Array [],
      "totalPreparations": 30,
    },
    Object {
      "cost": 60,
      "investment": Array [
        Object {
          "cumulativeInvestment": 50,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 10,
          "isInvestorParticipation": false,
          "participation": 10,
          "preparation": 40,
          "reward": 10,
          "roi": 0,
          "snipe": Object {
            "fp": 30,
            "roi": -20,
          },
        },
        Object {
          "cumulativeInvestment": 55,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 40,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 30,
            "roi": -25,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 45,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 45,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 45,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 2,
      "otherInvestment": Array [],
      "totalPreparations": 45,
    },
    Object {
      "cost": 100,
      "investment": Array [
        Object {
          "cumulativeInvestment": 90,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 10,
          "isInvestorParticipation": false,
          "participation": 10,
          "preparation": 80,
          "reward": 10,
          "roi": 0,
          "snipe": Object {
            "fp": 50,
            "roi": -40,
          },
        },
        Object {
          "cumulativeInvestment": 95,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 80,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 50,
            "roi": -45,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 85,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 85,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 85,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 3,
      "otherInvestment": Array [],
      "totalPreparations": 85,
    },
    Object {
      "cost": 150,
      "investment": Array [
        Object {
          "cumulativeInvestment": 135,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 15,
          "isInvestorParticipation": false,
          "participation": 15,
          "preparation": 120,
          "reward": 15,
          "roi": 0,
          "snipe": Object {
            "fp": 75,
            "roi": -60,
          },
        },
        Object {
          "cumulativeInvestment": 145,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 10,
          "isInvestorParticipation": false,
          "participation": 10,
          "preparation": 120,
          "reward": 10,
          "roi": 0,
          "snipe": Object {
            "fp": 75,
            "roi": -65,
          },
        },
        Object {
          "cumulativeInvestment": 150,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 120,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 75,
            "roi": -70,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 120,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 120,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 4,
      "otherInvestment": Array [],
      "totalPreparations": 120,
    },
    Object {
      "cost": 210,
      "investment": Array [
        Object {
          "cumulativeInvestment": 185,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 25,
          "isInvestorParticipation": false,
          "participation": 25,
          "preparation": 160,
          "reward": 25,
          "roi": 0,
          "snipe": Object {
            "fp": 105,
            "roi": -80,
          },
        },
        Object {
          "cumulativeInvestment": 200,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 15,
          "isInvestorParticipation": false,
          "participation": 15,
          "preparation": 160,
          "reward": 15,
          "roi": 0,
          "snipe": Object {
            "fp": 105,
            "roi": -90,
          },
        },
        Object {
          "cumulativeInvestment": 205,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 160,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 105,
            "roi": -100,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 165,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 165,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 5,
      "otherInvestment": Array [],
      "totalPreparations": 165,
    },
    Object {
      "cost": 270,
      "investment": Array [
        Object {
          "cumulativeInvestment": 240,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 30,
          "isInvestorParticipation": false,
          "participation": 30,
          "preparation": 210,
          "reward": 30,
          "roi": 0,
          "snipe": Object {
            "fp": 135,
            "roi": -105,
          },
        },
        Object {
          "cumulativeInvestment": 255,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 15,
          "isInvestorParticipation": false,
          "participation": 15,
          "preparation": 210,
          "reward": 15,
          "roi": 0,
          "snipe": Object {
            "fp": 135,
            "roi": -120,
          },
        },
        Object {
          "cumulativeInvestment": 265,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 215,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 135,
            "roi": -130,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 220,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 220,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 6,
      "otherInvestment": Array [],
      "totalPreparations": 220,
    },
    Object {
      "cost": 330,
      "investment": Array [
        Object {
          "cumulativeInvestment": 295,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 35,
          "isInvestorParticipation": false,
          "participation": 35,
          "preparation": 260,
          "reward": 35,
          "roi": 0,
          "snipe": Object {
            "fp": 165,
            "roi": -130,
          },
        },
        Object {
          "cumulativeInvestment": 315,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 20,
          "isInvestorParticipation": false,
          "participation": 20,
          "preparation": 260,
          "reward": 20,
          "roi": 0,
          "snipe": Object {
            "fp": 165,
            "roi": -145,
          },
        },
        Object {
          "cumulativeInvestment": 325,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 265,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 165,
            "roi": -160,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 270,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 270,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 7,
      "otherInvestment": Array [],
      "totalPreparations": 270,
    },
    Object {
      "cost": 380,
      "investment": Array [
        Object {
          "cumulativeInvestment": 340,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 40,
          "isInvestorParticipation": false,
          "participation": 40,
          "preparation": 300,
          "reward": 40,
          "roi": 0,
          "snipe": Object {
            "fp": 190,
            "roi": -150,
          },
        },
        Object {
          "cumulativeInvestment": 360,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 20,
          "isInvestorParticipation": false,
          "participation": 20,
          "preparation": 300,
          "reward": 20,
          "roi": 0,
          "snipe": Object {
            "fp": 190,
            "roi": -170,
          },
        },
        Object {
          "cumulativeInvestment": 375,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 310,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 190,
            "roi": -185,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 315,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 315,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 8,
      "otherInvestment": Array [],
      "totalPreparations": 315,
    },
    Object {
      "cost": 450,
      "investment": Array [
        Object {
          "cumulativeInvestment": 405,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 45,
          "isInvestorParticipation": false,
          "participation": 45,
          "preparation": 360,
          "reward": 45,
          "roi": 0,
          "snipe": Object {
            "fp": 225,
            "roi": -180,
          },
        },
        Object {
          "cumulativeInvestment": 430,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 25,
          "isInvestorParticipation": false,
          "participation": 25,
          "preparation": 360,
          "reward": 25,
          "roi": 0,
          "snipe": Object {
            "fp": 225,
            "roi": -200,
          },
        },
        Object {
          "cumulativeInvestment": 440,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 10,
          "isInvestorParticipation": false,
          "participation": 10,
          "preparation": 360,
          "reward": 10,
          "roi": 0,
          "snipe": Object {
            "fp": 225,
            "roi": -215,
          },
        },
        Object {
          "cumulativeInvestment": 445,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 360,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 225,
            "roi": -220,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 365,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 9,
      "otherInvestment": Array [],
      "totalPreparations": 365,
    },
    Object {
      "cost": 510,
      "investment": Array [
        Object {
          "cumulativeInvestment": 455,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 55,
          "isInvestorParticipation": false,
          "participation": 55,
          "preparation": 400,
          "reward": 55,
          "roi": 0,
          "snipe": Object {
            "fp": 255,
            "roi": -200,
          },
        },
        Object {
          "cumulativeInvestment": 485,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 30,
          "isInvestorParticipation": false,
          "participation": 30,
          "preparation": 400,
          "reward": 30,
          "roi": 0,
          "snipe": Object {
            "fp": 255,
            "roi": -225,
          },
        },
        Object {
          "cumulativeInvestment": 500,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 10,
          "isInvestorParticipation": false,
          "participation": 10,
          "preparation": 405,
          "reward": 10,
          "roi": 0,
          "snipe": Object {
            "fp": 255,
            "roi": -245,
          },
        },
        Object {
          "cumulativeInvestment": 505,
          "defaultParticipationIndex": -1,
          "expectedParticipation": 5,
          "isInvestorParticipation": false,
          "participation": 5,
          "preparation": 405,
          "reward": 5,
          "roi": 0,
          "snipe": Object {
            "fp": 255,
            "roi": -250,
          },
        },
        Object {
          "defaultParticipationIndex": -1,
          "expectedParticipation": 0,
          "isInvestorParticipation": false,
          "preparation": 410,
          "reward": 0,
          "roi": 0,
          "snipe": Object {
            "fp": 0,
            "roi": 0,
          },
        },
      ],
      "level": 10,
      "otherInvestment": Array [],
      "totalPreparations": 410,
    },
  ],
}
`;
